# mcp-receipe-recommender-app

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  Makefile  Readme.md  pyproject.toml  streamlit_app.py
.claude/: settings.json
.claude/skills/input-extractor/: SKILL.md
.claude/skills/place-finder/: SKILL.md
.claude/skills/recipe-chef/: SKILL.md
.claude/skills/weather-lookup/: SKILL.md
.streamlit/: config.toml
app/: client.py  crewai_agents.py
app/agent/: __init__.py  recipe_agent.py
app/crewAi/: __init__.py  agents.py  config.py  recipe_crew.py  tasks.py
app/servers/: mcp_server_fetch.py  server.py  servers_list.py  weather_server.py
app/streamlit/: streamlit_app.py
tests/: test_recipe_crew.py  test_weather_server.py
