[project]
name = "mcp-receipe-recommender-app"
version = "1.0.0"
description = "Includes MCP RecipeRecommender tools. The app allows users to input ingredients and receive recipe recommendations based on those ingredients. It also provides detailed information about the recommended recipes, including nutritional information and cooking instructions."
authors = [{ name = "Chaitanya Madduri" }]
requires-python = ">=3.13"

dependencies = [
    "httpx==0.27.2",
    "mcp==1.6.0",
    "typer==0.15.2",
    "openai==1.35.10",
    "pydantic>=2.6.0",
    "streamlit==1.42.0",
    "watchdog==4.0.0",
    "python-dotenv>=1.1.0",
]
